# luau-obfuscator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
benches/: comprehensive_benchmarks.rs  comprehensive_performance.rs  obfuscation_performance.rs
docs/: API_INTEGRATION.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  FAQ.md  PHASE_8_COMPLETE.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md
src/: main.rs
src/analysis/: controlflow.rs  mod.rs  roblox.rs  scope.rs
src/api/: client.rs  mod.rs  models.rs
src/cli/: args.rs  commands.rs  mod.rs
src/codegen/: assembly.rs  license.rs  mod.rs  runtime.rs  templates.rs
src/crypto/: aes.rs  kdf.rs  mod.rs  watermark.rs
src/obfuscation/: constants.rs  controlflow.rs  deadcode.rs  mod.rs  names.rs  strings.rs
src/parser/: ast.rs  luau.rs  mod.rs  visitor.rs
src/utils/: config.rs  errors.rs  mod.rs
templates/: chacha20_runtime.lua  hwid_binding.lua  license_validation.lua
tests/: crypto_security.rs  edge_cases.rs  obfuscation_tiers.rs  parser_comprehensive.rs  roblox_compatibility.rs  security_audit.rs  stress_testing.rs
tests/fixtures/: admin_commands.lua  combat_system.lua  gui_controller.lua  inventory_system.lua  tycoon_manager.lua
tests/fixtures/sample_scripts/: complex.lua  edge_cases.lua  malformed.lua  roblox_api.lua  simple.lua  type_annotations.lua
tests/helpers/: mod.rs  roblox_simulator.rs  test_utils.rs
tests/integration/: api_client.rs  basic_obfuscation.rs  cli_integration.rs  end_to_end_workflow.rs
